fix: extract global text-align:center as its own class and place on specific components

--- a/src/style.css
+++ b/src/style.css
@@ -61,9 +61,12 @@ button:focus-visible {
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  text-align: center;
   width: 800px;
   padding-top: 50px;
+}
+
+.text-center {
+  text-align: center;
 }
 
 @media screen and (max-width: 800px) {
